Fixed hub footer covering text

--- a/WebContent/css/HubStyle.css
+++ b/WebContent/css/HubStyle.css
@@ -10,7 +10,7 @@ table
 
 .content
 {
-	padding: 10px 10px 10px 10px;
+	padding: 10px 10px 40px 10px;
 }
 
 
